<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorSurface"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/dttoolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:id="@+id/headerCollapsing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="88dp"
                        android:layout_height="88dp"
                        app:cardCornerRadius="100dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:id="@+id/ivUser"
                            android:layout_width="88dp"
                            android:layout_height="88dp"
                            android:contentDescription="@string/content_desc_user_img"
                            android:src="@drawable/placeholder_img" />

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="250dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="16dp"
                        android:baselineAligned="false"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <LinearLayout
                            android:id="@+id/viewStars"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/repository"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/tvRepository"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/value_placeholder"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/viewFollowers"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/follower"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/tvFollower"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/value_placeholder"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/viewFollowing"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/tvFollowing"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/value_placeholder"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mid_collapsing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="16dp">

                    <TextView
                        android:id="@+id/tvFname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        tools:text="FullName" />

                    <TextView
                        android:id="@+id/tvUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textSize="16sp"
                        tools:text="username" />

                    <LinearLayout
                        android:id="@+id/profilecenter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/vCompany"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:layout_marginEnd="8dp"
                                android:contentDescription="@string/to_show_building_as_company"
                                android:src="@drawable/ic_company" />

                            <TextView
                                android:id="@+id/tvCompany"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="company"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/vLocation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="4dp"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:layout_marginEnd="8dp"
                                android:contentDescription="@string/to_showicon_as_location"
                                android:src="@drawable/ic_location" />

                            <TextView
                                android:id="@+id/tvLocation"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="location"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/detailtab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/viewpager2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        app:layout_anchor="@id/viewpager2"
        app:layout_anchorGravity="bottom|end"
        android:contentDescription="@string/favorite_button"
        app:iconTint="?attr/colorOnPrimaryContainer"
        app:srcCompat="@drawable/ic_favorite_fill" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>